@@ -296,6 +296,45 @@ sub delAccountsFromVDomain   #vdomain
     }
 }
 
+sub setGroupAccount
+{
+    my ($self, $group, $mail) = @_;
+    my $mailMod = EBox::Global->modInstance('mail');
+
+    EBox::Validate::checkEmailAddress($mail, __('mail account'));
+    $mailMod->checkMailNotInUse($mail, owner => $group);
+
+    # my ($lhs, $rhs) = split('@', $mail, 2);
+    # if (not $self->{vdomains}->vdomainExists($rhs)) {
+    #     # vdomain not managed by zentyal, just set the mail attribute
+    #     $group->set('mail', $mail);
+    #     return;
+    # }
+
+    # my $oldMail = $group->get('mail');
+    $group->set('mail', $mail);
+
+    # my $mailAlias = $mailMod->{malias};
+    # if ($oldMail and $mailAlias->aliasExists($oldMail)) {
+    #     $mailAlias->delAlias($oldMail);
+    # }
+
+    # $mailMod->{malias}->addGroupAlias($mail, $group, 1);
+}
+
+sub delGroupAccount
+{
+    my ($self, $group) = @_;
+
+    my $mailMod = EBox::Global->modInstance('mail');
+    my @groupAliases = @{ $mailMod->{malias}->groupAliases($group) };
+    foreach my $alias (@groupAliases) {
+        $mailMod->{malias}->delAlias($alias);
+    }
+
+    $group->delete('mail');
+}
+
 # Method: _addUser
 #
 #   Overrides <EBox::Samba::LdapUserBase> to create a default mail
@@ -330,10 +369,7 @@ sub _delGroup
 
     return unless ($mail->configured());
 
-    my @groupAliases = @{ $mail->{malias}->groupAliases($group) };
-    foreach my $alias (@groupAliases) {
-        $mail->{malias}->delAlias($alias);
-    }
+    $self->delGroupAccount($group);
 }
 
 sub _delGroupWarning
@@ -450,9 +486,16 @@ sub _groupAddOns
 {
     my ($self, $group) = @_;
 
-    return unless (EBox::Global->modInstance('mail')->configured());
-
     my $mail = EBox::Global->modInstance('mail');
+    return unless ($mail->configured());
+
+    my $mailManaged = 0;
+    my $mail = $group->get('mail');
+    if ($mail) {
+        my ($left, $vdomain) = split('@', $mail, 2);
+        $mailManaged = $mail->{vdomains}->vdomainExists($vdomain);
+    }
+
     my $aliases = $mail->{malias}->groupAliases($group);
     my @vd =  $mail->{vdomains}->vdomains();
 
@@ -473,6 +516,7 @@ sub _groupAddOns
         'service'  => $mail->service(),
         'groupEmpty' => $groupEmpty,
         'usersWithMail' => $usersWithMail,
+        'mailManaged'   => $mailManaged
     };
 
     return {
@@ -482,15 +526,15 @@ sub _groupAddOns
        };
 }
 
-sub _modifyGroup
-{
-    my ($self, $group) = @_;
+# sub _modifyGroup
+# {
+#     my ($self, $group) = @_;
 
-    return unless (EBox::Global->modInstance('mail')->configured());
+#     return unless (EBox::Global->modInstance('mail')->configured());
 
-    my $mail = EBox::Global->modInstance('mail');
-    $mail->{malias}->updateGroupAliases($group);
-}
+#     my $mail = EBox::Global->modInstance('mail');
+#     $mail->{malias}->updateGroupAliases($group);
+# }
 
 # Method: _accountIsManaged
 #
